--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TikTik</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="">
     <!-- navbar -->
     <navbar>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -18,7 +21,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <h2 class="navbar-brand pe-5">
-                <a href="index.html" class="text-decoration-none link-light">TikTik</a></h2>
+                <a href="index.html" class="text-decoration-none link-light dancing-script">TikTik</a></h2>
             <div class="navbar-collapse collapse  justify-content-lg-between ps-5" id="menu">
                 <ul class="navbar-nav ">
                     <li class=" nav-item "><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="trending.html">Trending</a></li>
@@ -110,18 +113,18 @@
         <div class="row">
             <div class="col col-md-4 col-sm-12">
                 <ul class="list-unstyled ">
-                    <div class="fw-bold ">CATEGORIES</div>
+                    <div class="fw-bold p-2 ">CATEGORIES</div>
                     <li><a href="men.html" class="text-decoration-none text-danger link-primary link-offset-2  link-underline-opacity-100-hover">Watches for Men</a></li>
                     <li class="link-underline-secondary"><a href="smart.html" class="text-decoration-none text-danger link-primary link-offset-2  link-underline-opacity-100-hover "> Smart Watches</a> </li>
-                    <li><a href="women.html" class="text-decoration-none text-danger link-primary link-offset-2  link-underline-opacity-100-hover"> Watches for Women</a></li>
+                    <li><a href="women.html" class="text-decoration-none text-danger link-primary link-offset-2  link-underline-opacity-100-hover "> Watches for Women</a></li>
                 </ul>
             </div>
             <!-- 2nd -->
             <div class="col col-md-4 col-sm-12 text-center">
                 <div class="fw-bold">For Sale:</div>
-                <p><a href="mailto:support@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">support@tk.co.in</a></p>
+                <p><a href="mailto:support@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">support@tiktik.co.in</a></p>
                 <div  class="fw-bold">For Complaints:</div>
-                <p><a href="mailto: customercare@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> customercare@tk.co.in</a></p>
+                <p><a href="mailto: customercare@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> customercare@tiktik.co.in</a></p>
             </div>
             <!-- 3rd -->
             <div class="col col-md-4 col-sm-12">
