--- a/smart.html
+++ b/smart.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TikTik</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -24,7 +27,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <h2 class="navbar-brand pe-5">
-                    <a href="index.html" class="text-decoration-none link-light">TikTik</a></h2>
+                    <a href="index.html" class="text-decoration-none link-light dancing-script">TikTik</a></h2>
                 <div class="navbar-collapse collapse  justify-content-lg-between ps-5" id="menu">
                     <ul class="navbar-nav ">
                         <li class=" nav-item "><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="trending.html">Trending</a></li>
