--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body class="">
+<body class="bg-dark-subtle">
     <!-- navbar -->
     <navbar>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -21,13 +21,21 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <h2 class="navbar-brand pe-5">
-                <a href="index.html" class="text-decoration-none link-light dancing-script">TikTik</a></h2>
+                <a href="index.html" class="text-decoration-none link-light dancing-script active" aria-current="page">TikTik</a></h2>
             <div class="navbar-collapse collapse  justify-content-lg-between ps-5" id="menu">
-                <ul class="navbar-nav ">
-                    <li class=" nav-item "><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="trending.html">Trending</a></li>
-                    <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="men.html">Men</a></li>
-                    <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="women.html">Women</a></li>
-                    <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover " href="smart.html">Smart</a></li>
+                  <ul class="navbar-nav">
+                    <li class="nav-item mx-1">
+                      <a class="nav-link"  href="trending.html">Trending</a>
+                    </li>
+                    <li class="nav-item mx-1">
+                      <a class="nav-link"  href="men.html">Men</a>
+                    </li>
+                    <li class="nav-item mx-1">
+                      <a class="nav-link" href="women.html">Women</a>
+                    </li>
+                    <li class="nav-item mx-1">
+                     <a class="nav-link"  href="smart.html">Smart</a>
+                      </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search Watches" >
@@ -55,11 +63,13 @@
     </div>
 </banner>
 <!-- aside -->
+<div class="text-white bg-dark position-fixed  bottom-50 border-2 z-1">Get 10% off</div>
 <aside class="text-info position-fixed end-0 bottom-0 z-1">
-    <div class="bi bi-facebook"></div>
-    <div class="bi bi-twitter"></div>
-    <div class="bi bi-instagram"></div>
-    <div class="bi bi-linkedin"></div>
+    <a href="#"> <div class="bi bi-facebook link-info"></div></a>
+    <a href="#"><div class="bi bi-twitter link-info"></div></a>
+    <a href="#"><div class="bi bi-instagram link-info"></div></a>
+    <a href="https://www.linkedin.com/in/auskin-m"><div class="bi bi-linkedin link-info"></div></a>
+    <a href="https://github.com/Auskin27/watch-e-commerce"><div class="bi bi-github link-info "></div></a>
 </aside>
 
 <div class="container">
@@ -121,9 +131,9 @@
             </div>
             <!-- 2nd -->
             <div class="col col-md-4 col-sm-12 text-center">
-                <div class="fw-bold">For Sale:</div>
+                <div class="fw-bold">For Sale</div>
                 <p><a href="mailto:support@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">support@tiktik.co.in</a></p>
-                <div  class="fw-bold">For Complaints:</div>
+                <div  class="fw-bold">For Complaints</div>
                 <p><a href="mailto: customercare@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> customercare@tiktik.co.in</a></p>
             </div>
             <!-- 3rd -->
