--- a/men.html
+++ b/men.html
@@ -29,11 +29,19 @@
                 <h2 class="navbar-brand pe-5">
                     <a href="index.html" class="text-decoration-none link-light dancing-script">TikTik</a></h2>
                 <div class="navbar-collapse collapse  justify-content-lg-between ps-5" id="menu">
-                    <ul class="navbar-nav ">
-                        <li class=" nav-item "><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="trending.html">Trending</a></li>
-                        <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="men.html">Men</a></li>
-                        <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="women.html">Women</a></li>
-                        <li class="nav-item"><a class="nav-link link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover " href="smart.html">Smart</a></li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item mx-1">
+                          <a class="nav-link" href="trending.html">Trending</a>
+                        </li>
+                        <li class="nav-item mx-1">
+                          <a class="nav-link active" aria-current="page" href="men.html">Men</a>
+                        </li>
+                        <li class="nav-item mx-1">
+                          <a class="nav-link"  href="women.html">Women</a>
+                        </li>
+                        <li class="nav-item mx-1">
+                            <a class="nav-link"  href="smart.html">Smart</a>
+                          </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search Watches" >
@@ -43,10 +51,11 @@
             </div>
         </nav>
         <aside class="text-info position-fixed end-0 bottom-0 z-1">
-            <div class="bi bi-facebook"></div>
-            <div class="bi bi-twitter"></div>
-            <div class="bi bi-instagram"></div>
-            <div class="bi bi-linkedin"></div>
+            <a href="#"> <div class="bi bi-facebook link-info"></div></a>
+            <a href="#"><div class="bi bi-twitter link-info"></div></a>
+            <a href="#"><div class="bi bi-instagram link-info"></div></a>
+            <a href="https://www.linkedin.com/in/auskin-m"><div class="bi bi-linkedin link-info"></div></a>
+            <a href="https://github.com/Auskin27/watch-e-commerce"><div class="bi bi-github link-info "></div></a>
         </aside>
         <!-- main -->
         <main>
@@ -248,10 +257,10 @@
             </div>
             <!-- 2nd -->
             <div class="col col-md-4 col-sm-12 text-center">
-                <div class="fw-bold">For Sale:</div>
-                <p><a href="mailto:support@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">support@tk.co.in</a></p>
-                <div  class="fw-bold">For Complaints:</div>
-                <p><a href="mailto: customercare@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> customercare@tk.co.in</a></p>
+                <div class="fw-bold">For Sale</div>
+                <p><a href="mailto:support@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">support@tiktik.co.in</a></p>
+                <div  class="fw-bold">For Complaints</div>
+                <p><a href="mailto: customercare@tiktik.co.in" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> customercare@tiktik.co.in</a></p>
             </div>
             <!-- 3rd -->
             <div class="col col-md-4 col-sm-12">
