Date had been modified

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 <!-- aside -->
 <div class="text-white bg-dark position-fixed  bottom-50 border-2 z-1">Get 10% off</div>
 <aside class="text-info position-fixed end-0 bottom-0 z-1">
-    <a href="#"> <div class="bi bi-facebook link-info"></div></a>
-    <a href="#"><div class="bi bi-twitter link-info"></div></a>
-    <a href="#"><div class="bi bi-instagram link-info"></div></a>
-    <a href="https://www.linkedin.com/in/auskin-m"><div class="bi bi-linkedin link-info"></div></a>
-    <a href="https://github.com/Auskin27/watch-e-commerce"><div class="bi bi-github link-info "></div></a>
+    <a href="#"> <div class="bi bi-facebook link-dark"></div></a>
+    <a href="#"><div class="bi bi-twitter link-dark"></div></a>
+    <a href="#"><div class="bi bi-instagram link-dark"></div></a>
+    <a href="https://www.linkedin.com/in/auskin-m"><div class="bi bi-linkedin link-dark"></div></a>
+    <a href="https://github.com/Auskin27/watch-e-commerce"><div class="bi bi-github link-dark "></div></a>
 </aside>
 
 <div class="container">
