Changes had been modified

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <div class="carousel slide"  data-bs-theme="dark" data-bs-ride="carousel" id="banner">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-            <img src="images/mainpage_desktop.png" class="w-100 d-block">
+            <img src="images/mainpage_desktop.png" class="w-100 d-block" alt="banner_img">
         </div> 
         <div class="carousel-item" data-bs-interval="5000">
-            <img src="images/offer_banner.png"  class="w-100 d-block">
+            <img src="images/offer_banner.png"  alt="banner_img"  class="w-100 d-block">
         </div>
         <div class="carousel-indicators">
             <button class="active" data-bs-slide-to="0" data-bs-target="#banner"></button>
@@ -76,7 +76,7 @@
     <div class="row gy-3">
         <div class="col-sm-4">
             <div class="card" >
-                <img src="images/smart1.jpg" class="card-img-top" alt="...">
+                <img src="images/smart1.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">SMART WATCHES</h5>
                     <p class="card-text">Explore the latest in horology with our curated collection of trending watches, blending timeless elegance with cutting-edge design and technology.</p>  <br> 
@@ -86,7 +86,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img src="images/men2.jpg" class="card-img-top" alt="...">
+                <img src="images/men2.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">WATCHES FOR MEN</h5>
                     <p class="card-text te">Discover stylish men's watches for every occasion elevate your style with our collection of men's watches, marrying sophistication with precision craftsmanship for the modern gentleman</p>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img src="images/women1.jpg" class="card-img-top" alt="...">
+                <img src="images/women1.jpg" class="card-img-top" alt="watch_img>
                 <div class="card-body">
                     <h5 class="card-title">WATCHES FOR WOMEN</h5>
                     <p class="card-text te">Explore our exquisite selection of women's watches, where elegance meets innovation, offering a perfect blend of style and functionality for the modern woman's discerning taste.</p>
