--- a/men.html
+++ b/men.html
@@ -63,7 +63,7 @@
             <div class="row gy-3">
                 <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/men1.jpg" class="card-img-top" alt="...">
+                        <img src="images/men1.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">MARINER</h5>
                             <p class="card-text">Details: This iconic watch features a durable black resin band and case, with analog-digital display, shock resistance, and water resistance up to 200 meters.</p> 
@@ -78,7 +78,7 @@
                       <!-- 2nd -->
                       <div class="col-sm-4">
                         <div class="card" >
-                            <img src="images/men2.jpg"  class="card-img-top" alt="...">
+                            <img src="images/men2.jpg"  class="card-img-top" alt="watch_img">
                             <div class="card-body">
                                 <h5 class="card-title">FOSSIL</h5>
                                 <p class="card-text">Details: This stylish automatic watch boasts a stainless steel case and bracelet, with a blue dial, day-date display, and water resistance up to 100 meters.</p> 
@@ -93,7 +93,7 @@
                   <!-- 3 -->
                   <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/men3.jpg" class="card-img-top" alt="...">
+                        <img src="images/men3.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">Citizen Eco-Drive BM8180-03E</h5>
                             <p class="card-text">Details: This eco-friendly watch features a stainless steel case, canvas strap, and Eco-Drive technology powered by light. It also includes a day-date display and water resistance up to 100 meters.
@@ -109,7 +109,7 @@
               <!-- 4 -->
               <div class="col-sm-4">
                 <div class="card" >
-                    <img src="images/men4.jpg" class="card-img-top" alt="...">
+                    <img src="images/men4.jpg" class="card-img-top" alt="watch_img">
                     <div class="card-body">
                         <h5 class="card-title">RADO</h5>
                         <p class="card-text">Details: A legendary dive watch crafted in stainless steel, featuring a black dial, ceramic bezel, automatic movement, a stainless steel case and bracelet, and water resistance up to 300 meters.</p> 
@@ -124,7 +124,7 @@
           <!-- 5 -->
           <div class="col-sm-4">
             <div class="card" >
-                <img src="images/men5.jpg" class="card-img-top" alt="...">
+                <img src="images/men5.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">OMEGA</h5>
                     <p class="card-text">Details: Known as the "Moonwatch," this iconic timepiece features a stainless steel case, black dial, chronograph functions, manual-winding movement, and a tachymeter bezel.</p>  
@@ -139,7 +139,7 @@
       <!-- 6 -->
       <div class="col-sm-4">
         <div class="card" >
-            <img src="images/men6.png" class="card-img-top" alt="...">
+            <img src="images/men6.png" class="card-img-top" alt="watch_img">
             <div class="card-body">
                 <h5 class="card-title">WENDE</h5>
                 <p class="card-text">Details: This sporty chronograph watch boasts a stainless steel case and bracelet, black dial, automatic movement, and water resistance up to 100 meters.</p>  
@@ -154,7 +154,7 @@
   <!-- 7 -->
   <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men7.jpg" class="card-img-top" alt="...">
+        <img src="images/men7.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">DANIEL WELLINGTON</h5>
             <p class="card-text">Details: A classic chronograph watch with a stainless steel case and bracelet, black dial chronograph functions..</p>  
@@ -169,7 +169,7 @@
 <!-- 8 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men8.jpg" class="card-img-top" alt="...">
+        <img src="images/men8.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Amazfit GTR 3</h5>
             <p class="card-text">Details: Offers a premium design, long battery life and vintage-inspired automatic watch features a stainless steel case,skeleton back.</p> 
@@ -184,7 +184,7 @@
 <!-- 9 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men9.jpg" class="card-img-top" alt="...">
+        <img src="images/men9.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">FOSSIL</h5>
             <p class="card-text">Details: A rugged outdoor watch with a brass case, nylon strap, Indiglo night-light, date display, and water resistance up to 50 meters.</p> 
@@ -199,7 +199,7 @@
 <!-- 10 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men10.jpg" class="card-img-top" alt="...">
+        <img src="images/men10.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">RIDER</h5>
             <p class="card-text">Details: This precision quartz watch features a stainless steel case and bracelet, carbon fiber dial, sweeping second hand, and date display.</p>  
@@ -214,7 +214,7 @@
 <!-- 11 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men11.jpg" class="card-img-top" alt="...">
+        <img src="images/men11.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">CAFTIER</h5>
             <p class="card-text">Details: A sophisticated dive watch with a stainless steel case and bracelet,ceramic bezel, automatic movement, and water resistance</p>  
@@ -229,7 +229,7 @@
 <!-- 12 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/men.jpg" class="card-img-top" alt="...">
+        <img src="images/men.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">POLICE</h5>
             <p class="card-text">Details: A military-inspired mechanical watch with a stainless steel case, canvas strap, black dial, and exhibition case back.</p> 
