--- a/smart.html
+++ b/smart.html
@@ -62,7 +62,7 @@
             <div class="row gy-3">
                 <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/smart1.jpg" class="card-img-top" alt="...">
+                        <img src="images/smart1.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">Fitbit Versa 3</h5>
                             <p class="card-text">Details: Offers built-in GPS, heart rate monitoring, sleep tracking, and up to 6 days of battery life.</p> 
@@ -77,7 +77,7 @@
                       <!-- 2nd -->
                       <div class="col-sm-4">
                         <div class="card" >
-                            <img src="images/smart2.jpg"  class="card-img-top" alt="...">
+                            <img src="images/smart2.jpg"  class="card-img-top" alt="watch_img">
                             <div class="card-body">
                                 <h5 class="card-title">Garmin Venu 2</h5>
                                 <p class="card-text">Details: Features a vibrant AMOLED display, advanced health metrics, GPS, and sports tracking.</p> 
@@ -92,7 +92,7 @@
                   <!-- 3 -->
                   <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/smart3.jpg" class="card-img-top" alt="...">
+                        <img src="images/smart3.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">Apple Watch Series 7</h5>
                             <p class="card-text">Details: Features a larger, always-on Retina display, advanced health sensors, and water resistance.
@@ -108,7 +108,7 @@
               <!-- 4 -->
               <div class="col-sm-4">
                 <div class="card" >
-                    <img src="images/smart4.jpg" class="card-img-top" alt="...">
+                    <img src="images/smart4.jpg" class="card-img-top" alt="watch_img">
                     <div class="card-body">
                         <h5 class="card-title">Samsung Galaxy Watch 4</h5>
                         <p class="card-text">Details: Runs on Wear OS powered by Samsung, with advanced health tracking features.</p> 
@@ -123,7 +123,7 @@
           <!-- 5 -->
           <div class="col-sm-4">
             <div class="card" >
-                <img src="images/smart5.jpg" class="card-img-top" alt="...">
+                <img src="images/smart5.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">Huawei Watch GT 3</h5>
                     <p class="card-text">Details: Boasts a stylish design, long battery life, fitness tracking, and SpO2 monitoring.</p>  
@@ -138,7 +138,7 @@
       <!-- 6 -->
       <div class="col-sm-4">
         <div class="card" >
-            <img src="images/smart6.jpg" class="card-img-top" alt="...">
+            <img src="images/smart6.jpg" class="card-img-top" alt="watch_img">
             <div class="card-body">
                 <h5 class="card-title">Fossil Gen 6</h5>
                 <p class="card-text">Details: Powered by Wear OS, with customizable dials, health tracking, and NFC for contactless payments.</p>  
@@ -153,7 +153,7 @@
   <!-- 7 -->
   <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart7.jpg" class="card-img-top" alt="...">
+        <img src="images/smart7.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">TicWatch Pro 3</h5>
             <p class="card-text">Details: Runs on Wear OS, with dual-layer display technology, long battery life, and fitness tracking.</p>  
@@ -168,7 +168,7 @@
 <!-- 8 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart8.jpg" class="card-img-top" alt="...">
+        <img src="images/smart8.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Amazfit GTR 3</h5>
             <p class="card-text">Details: Offers a premium design, long battery life, GPS, heart rate monitoring, and sleep tracking.</p> 
@@ -183,7 +183,7 @@
 <!-- 9 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart9.jpg" class="card-img-top" alt="...">
+        <img src="images/smart9.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Garmin Forerunner 945</h5>
             <p class="card-text">Details: Designed for runners, with advanced running dynamics, GPS, music storage, and smart notifications.</p> 
@@ -198,7 +198,7 @@
 <!-- 10 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart10.jpg" class="card-img-top" alt="...">
+        <img src="images/smart10.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Xiaomi Mi Watch</h5>
             <p class="card-text">Details: Affordable smartwatch with built-in GPS, heart rate monitoring, and customizable faces.  </p>  
@@ -213,7 +213,7 @@
 <!-- 11 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart11.jpg" class="card-img-top" alt="...">
+        <img src="images/smart11.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Oppo Watch</h5>
             <p class="card-text">Details: Stylish smartwatch with AMOLED display, Wear OS, fitness tracking, and VOOC fast charging.</p>  
@@ -228,7 +228,7 @@
 <!-- 12 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/smart12.jpg" class="card-img-top" alt="...">
+        <img src="images/smart12.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">Mobvoi TicWatch E3</h5>
             <p class="card-text">Details: Budget-friendly smartwatch with Wear OS, heart rate monitoring, GPS, and long battery life.</p> 
