--- a/trending.html
+++ b/trending.html
@@ -86,7 +86,7 @@
         <div class="container-fluid bg bg-danger">
             <div class="row">
                 <div class="col col-md-6 col-12">
-                    <img src="images/women2.jpg" height="600px" width="600px" class="img-fluid  mt-3 rounded-3" alt="">
+                    <img src="images/women2.jpg" height="600px" width="600px" class="img-fluid  mt-3 rounded-3" alt="watch_img">
                 </div>
                 <div class="col col-md-6 col-sm-12">
                     <h1 class="fw-bold fs-1 pt-lg-5 p-md-2 text-center">FOSSIL</h1>
@@ -112,11 +112,11 @@
                 </div> 
                 </div>
                 <div class="col-lg-3 py-2 col-md-6 col-12 text-center">
-                    <img src="images/men8.jpg" style="max-height: 400px; max-width:1200px;" class="img-fluid  mt-3 object-fit-cover rounded-2" alt="">
+                    <img src="images/men8.jpg" style="max-height: 400px; max-width:1200px;" class="img-fluid  mt-3 object-fit-cover rounded-2" alt="watch_img">
                 </div>
                 <!-- 2nd row 2nd col -->
                 <div class="col-lg-3 py-2 col-md-6 col-12 text-center">
-                    <img src="images/men11.jpg" style="max-height: 400px; max-width:500px;" class="img-fluid  mt-3 object-fit-cover rounded-2" alt="">
+                    <img src="images/men11.jpg" style="max-height: 400px; max-width:500px;" class="img-fluid  mt-3 object-fit-cover rounded-2" alt="watch_img">
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <h1 class="fw-boldt fs-1 pt-lg-5 p-md-2 text-center">CARTIER</h1>
