--- a/women.html
+++ b/women.html
@@ -66,7 +66,7 @@
             <div class="row gy-3">
                 <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/women1.jpg" class="card-img-top" alt="...">
+                        <img src="images/women1.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">PATEK PHILIPPE</h5>
                             <p class="card-text">Details:offers minimalist and elegant watches for women, characterized by clean designs, interchangeable straps, and versatile styles suitable for any occasion.</p> 
@@ -81,7 +81,7 @@
                       <!-- 2nd -->
                       <div class="col-sm-4">
                         <div class="card" >
-                            <img src="images/women2.jpg"  class="card-img-top" alt="...">
+                            <img src="images/women2.jpg"  class="card-img-top" alt="watch_img">
                             <div class="card-body">
                                 <h5 class="card-title">FOSSIL</h5>
                                 <p class="card-text">Details:Fossil offers a variety of classic and contemporary watch styles for women, ranging from minimalist designs to more intricate pieces with chronograph functions.</p> 
@@ -96,7 +96,7 @@
                   <!-- 3 -->
                   <div class="col-sm-4">
                     <div class="card" >
-                        <img src="images/women3.jpg" class="card-img-top" alt="...">
+                        <img src="images/women3.jpg" class="card-img-top" alt="watch_img">
                         <div class="card-body">
                             <h5 class="card-title">TRNDA</h5>
                             <p class="card-text">Details:Trnda is renowned for its sleek and minimalist watch designs,including eco-drive models, often featuring a signature single dot at 12 o'clock and clean lines.
@@ -112,7 +112,7 @@
               <!-- 4 -->
               <div class="col-sm-4">
                 <div class="card" >
-                    <img src="images/women4.jpg" class="card-img-top" alt="...">
+                    <img src="images/women4.jpg" class="card-img-top" alt="watch_img">
                     <div class="card-body">
                         <h5 class="card-title">KATE SPADE NEW YORK</h5>
                         <p class="card-text">Details: Kate Spade New York watches are known for their playful and colorful minimalist watch designs,and bold colors.</p> 
@@ -127,7 +127,7 @@
           <!-- 5 -->
           <div class="col-sm-4">
             <div class="card" >
-                <img src="images/women5.jpg" class="card-img-top" alt="...">
+                <img src="images/women5.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">THE FIFTH</h5>
                     <p class="card-text">Details:THE FIFTH is renowned for its sleek and minimalist watch designs, often featuring a signature single dot at 12 o'clock and clean lines.</p>  
@@ -142,7 +142,7 @@
       <!-- 6 -->
       <div class="col-sm-4">
         <div class="card" >
-            <img src="images/women6.jpg" class="card-img-top" alt="...">
+            <img src="images/women6.jpg" class="card-img-top" alt="watch_img">
             <div class="card-body">
                 <h5 class="card-title">CASIO</h5>
                 <p class="card-text">Details:Produces a wide range of women's watches, including eco-drive models powered by light and featuring various styles from sporty to elegant.</p>  
@@ -157,7 +157,7 @@
   <!-- 7 -->
   <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women7.jpg" class="card-img-top" alt="...">
+        <img src="images/women7.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">SKAGEN</h5>
             <p class="card-text">Details:Skagen watches are known for their Danish-inspired minimalist designs, featuring slim profiles, clean dials, and understated elegance.</p>  
@@ -172,7 +172,7 @@
 <!-- 8 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women8.jpg" class="card-img-top" alt="...">
+        <img src="images/women8.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">ANNE KLEIN</h5>
             <p class="card-text">Details:Anne Klein specializes in sophisticated and timeless women's watches, known for their classic designs </p> 
@@ -187,7 +187,7 @@
 <!-- 9 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women9.jpg" class="card-img-top" alt="...">
+        <img src="images/women9.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">MARK JACOBS</h5>
             <p class="card-text">Details:Marc Jacobs watches for women reflect the brand's eclectic and fashion-forward aesthetic,unique materials, and playful details.</p> 
@@ -202,7 +202,7 @@
 <!-- 10 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women10.jpg" class="card-img-top" alt="...">
+        <img src="images/women10.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">MOVODO</h5>
             <p class="card-text">Details:Movado is renowned for its sleek and minimalist watch designs, often featuring a signature single dot at 12 o'clock and clean lines.</p>  
@@ -217,7 +217,7 @@
 <!-- 11 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women11.jpg" class="card-img-top" alt="...">
+        <img src="images/women11.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">RADO</h5>
             <p class="card-text">Details:Offers stylish and sophisticated watches for women, often featuring the brand's iconic motifs, luxurious materials, and timeless designs.</p>  
@@ -232,7 +232,7 @@
 <!-- 12 -->
 <div class="col-sm-4">
     <div class="card" >
-        <img src="images/women12.jpg" class="card-img-top" alt="...">
+        <img src="images/women12.jpg" class="card-img-top" alt="watch_img">
         <div class="card-body">
             <h5 class="card-title">MICHAEL KORS</h5>
             <p class="card-text">Details:Offers minimalist and elegant watches for women, characterized by clean designs,versatile styles suitable for any occasion.</p> 
