Changes had been modified

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img src="images/women1.jpg" class="card-img-top" alt="watch_img>
+                <img src="images/women1.jpg" class="card-img-top" alt="watch_img">
                 <div class="card-body">
                     <h5 class="card-title">WATCHES FOR WOMEN</h5>
                     <p class="card-text te">Explore our exquisite selection of women's watches, where elegance meets innovation, offering a perfect blend of style and functionality for the modern woman's discerning taste.</p>
